# yayaka-chain

./: .gitignore  LICENSE  README.md  dune-project  yayaka-chain.install  yayaka-chain.opam
lib/: block.ml  block.mli  blockBody.ml  blockBody.mli  chain.ml  command.ml  command.mli  commands.ml  commands.mli  dune  expirationDateTime.ml  expirationDateTime.mli  hash.ml  hash.mli  hashAlgorithm.ml  hashAlgorithm.mli  iD.ml  power.ml  power.mli  publicKey.ml  publicKey.mli  publicKeyAlgorithm.ml  publicKeyAlgorithm.mli  signature.ml  signature.mli  signatureDeclaration.ml  signatureDeclaration.mli  signatureDeclarations.ml  signatureDeclarations.mli  signatures.ml  signatures.mli  util.ml
test/: blockBody_test.ml  block_test.ml  command_test.ml  commands_test.ml  dune  expirationDateTime_test.ml  hashAlgorithm_test.ml  hash_test.ml  power_test.ml  publicKeyAlgorithm_test.ml  publicKey_test.ml  signatureDeclaration_test.ml  signatureDeclarations_test.ml  signature_test.ml  signatures_test.ml  support.ml  test.ml  util_test.ml
