opam-version: "2.0"
version: "0.1.0"
maintainer: "ryo33@yayaka.org"
authors: ["Ryo Hashiguchi <ryo33@yayaka.org>"]
license: "AGPL"
bug-reports: "https://gitlib.com/yayaka/yayaka-chain/issues"
homepage: "https://gitlib.com/yayaka/yayaka-chain"
run-test: [
  "dune runtest"
]
depends: [
  "dune" {build}
  "alcotest" {with-test}
  "core"
  "bos"
  "hex"
  "base64"
]
synopsis: "Manipulates yayaka-chains"
